--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestDeleteEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestDeleteEntity-variables.yaml
@@ -1,5 +1,5 @@
 ---
 STORAGE_ENDPOINT_SUFFIX: core.windows.net
 TABLES_PRIMARY_STORAGE_ACCOUNT_KEY: Kg==
-TABLES_STORAGE_ACCOUNT_NAME: chrisstablesprim
-randomSeed: "1621624377"
+TABLES_STORAGE_ACCOUNT_NAME: seankaneprim
+randomSeed: "1626280321"
