working test for merge

--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotable6z819q2hdifm3"}'
+    body: '{"TableName":"gotabledak1a1arh606r"}'
     form: {}
     headers:
       Accept:
@@ -19,29 +19,29 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 16:32:31 GMT
+      - Wed, 14 Jul 2021 17:25:01 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.cosmos.azure.com/Tables
     method: POST
   response:
-    body: '{"TableName":"gotable6z819q2hdifm3","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
+    body: '{"TableName":"gotabledak1a1arh606r","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Wed, 14 Jul 2021 16:32:32 GMT
+      - Wed, 14 Jul 2021 17:25:01 GMT
       Etag:
-      - W/"datetime'2021-07-14T16%3A32%3A32.0850952Z'"
+      - W/"datetime'2021-07-14T17%3A25%3A01.1972104Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/Tables('gotable6z819q2hdifm3')
+      - https://seankaneprim.table.cosmos.azure.com/Tables('gotabledak1a1arh606r')
       X-Ms-Request-Id:
-      - b534bdd6-327b-43c4-b967-cc4548f30fa7
+      - 466b5097-f1e6-4504-8620-3602d7c59220
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"Bool":true,"Byte":"c29tZWJ5dGVz","DateTime":"2021-07-14T12:32:33.3855784-04:00","Float":3.14159,"Integer":1,"PartitionKey":"partition","RowKey":"row","String":"someString","TimeStamp":"0001-01-01T00:00:00Z"}'
+    body: '{"Bool":true,"Byte":"c29tZWJ5dGVz","DateTime":"2021-07-13T00:00:00Z","Float":3.14159,"Integer":1,"PartitionKey":"partition","RowKey":"row","String":"someString","TimeStamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -49,7 +49,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "209"
+      - "196"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -60,24 +60,24 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 16:32:33 GMT
+      - Wed, 14 Jul 2021 17:25:02 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/gotable6z819q2hdifm3
+    url: https://seankaneprim.table.cosmos.azure.com/gotabledak1a1arh606r
     method: POST
   response:
     body: ""
     headers:
       Date:
-      - Wed, 14 Jul 2021 16:32:32 GMT
+      - Wed, 14 Jul 2021 17:25:01 GMT
       Etag:
-      - W/"datetime'2021-07-14T16%3A32%3A32.9011208Z'"
+      - W/"datetime'2021-07-14T17%3A25%3A01.8787848Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/gotable6z819q2hdifm3(PartitionKey='partition',RowKey='row')
+      - https://seankaneprim.table.cosmos.azure.com/gotabledak1a1arh606r(PartitionKey='partition',RowKey='row')
       Preference-Applied:
       - return-no-content
       X-Ms-Request-Id:
-      - 57ebba96-572e-4807-8095-741215341817
+      - dd3a508c-b694-4258-9048-b60b2c3aff86
     status: 204 No Content
     code: 204
     duration: ""
@@ -93,18 +93,18 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 16:32:33 GMT
+      - Wed, 14 Jul 2021 17:25:02 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotable6z819q2hdifm3')
+    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotabledak1a1arh606r')
     method: DELETE
   response:
     body: ""
     headers:
       Date:
-      - Wed, 14 Jul 2021 16:32:32 GMT
+      - Wed, 14 Jul 2021 17:25:01 GMT
       X-Ms-Request-Id:
-      - b9847f0b-75fe-4385-ad0b-d7aadc016a78
+      - f0237e68-d7fc-4054-bcab-a510a1b1f69f
     status: 204 No Content
     code: 204
     duration: ""
